--- a/ts_20-Discharge-Module/200306 Discharge Module R2/PCB.PcbDoc.htm
+++ b/ts_20-Discharge-Module/200306 Discharge Module R2/PCB.PcbDoc.htm
@@ -126,17 +126,17 @@
             <tr class="front_matter">
             <td class="front_matter_column1">Date</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">4/04/2020</td>
+            <td class="front_matter_column3">2/05/2020</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Time</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">4:07:06 PM</td>
+            <td class="front_matter_column3">11:55:00 AM</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Filename</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3"><a href="file://C:\Users\ccben\Desktop\TS_20\ts_20-pcb-development\ts_20-Discharge-Module\200306 Discharge Module R2\PCB.PcbDoc" class="file"><acronym title="C:\Users\ccben\Desktop\TS_20\ts_20-pcb-development\ts_20-Discharge-Module\200306 Discharge Module R2\PCB.PcbDoc">C:\Users\ccben\Desktop\TS_20\ts_20-pcb-development\ts_20-Discharge-Module\200306 Discharge Module R2\PCB.PcbDoc</acronym></a></td>
+            <td class="front_matter_column3"><a href="file://C:\Users\benmc\Documents\Github\ts_20-pcb-development\ts_20-Discharge-Module\200306 Discharge Module R2\PCB.PcbDoc" class="file"><acronym title="C:\Users\benmc\Documents\Github\ts_20-pcb-development\ts_20-Discharge-Module\200306 Discharge Module R2\PCB.PcbDoc">C:\Users\benmc\Documents\Github\ts_20-pcb-development\ts_20-Discharge-Module\200306 Discharge Module R2\PCB.PcbDoc</acronym></a></td>
             </tr>
         </table>
         
